--- a/hugo.yaml
+++ b/hugo.yaml
@@ -68,7 +68,7 @@ params:
 
     comments:
         enabled: true
-        provider: disqus
+        provider: utterances
 
     widgets:
         homepage:
